[package]
name = "cron_schedule"
version = "0.1.0"
authors = ["Cron Near <hello@cron.near>"]
repository = "https://github.com/Cron-Near/Schedule"
documentation = "https://docs.rs/cron_schedule"
readme = "README.md"
description = "A cron expression parser, adapted for blockchain environments."
keywords = [ "cron", "schedule", "repeat", "blockchain", "near" ]
homepage = "https://cron.cat"
license = "MIT"
edition = "2018"

[lib]
name = "cron_schedule"

[dependencies]
chrono = "~0.4"
nom = "~4.1"
once_cell = "1.5.2"
