[package]
name = "cron_schedule"
version = "0.3.1"
authors = ["CronCat <meow@cron.cat>"]
repository = "https://github.com/Cron-Near/Schedule"
documentation = "https://docs.rs/cron_schedule"
readme = "README.md"
description = "A cron expression parser, adapted for blockchain environments."
keywords = ["cron", "schedule", "repeat", "blockchain", "near"]
homepage = "https://cron.cat"
license = "MIT"
edition = "2021"

[lib]
name = "cron_schedule"

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["clock"]}
nom = "~7.1"
once_cell = "1.5.2"
